简单的CfRecord查询

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nz-table #nzTable [nzDataSource]="accounts" [nzIsPagination]="false">
+<nz-table #nzTable [nzData]="cfRecords" [nzShowPagination]="false">
   <thead nz-thead>
     <tr>
       <th nz-th>
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody nz-tbody>
-    <tr nz-tbody-tr *ngFor="let cfRecord of cfRecords">
+    <tr nz-tbody-tr *ngFor="let cfRecord of nzTable.data">
       <td nz-td>{{cfRecord.localMoney}}</td>
       <td nz-td>{{cfRecord.recordDateTime}}</td>
       <td nz-td>{{cfRecord.remark}}</td>
