修改CfRecord查询界面

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,16 +1,27 @@
-<nz-table #nzTable [nzData]="cfRecords" [nzShowPagination]="false">
-  <theadead>
+<nz-table #nzTable [nzData]="cfRecordVOs" [nzShowPagination]="false">
+  <thead>
     <tr>
-      <th>Date</th>
-      <th>Account(s)/Category</th>
-      <th>Money</th>
+      <th nzShowExpand></th>
+      <th class="align-center">Date</th>
+      <th class="align-center">Account(s)/Category</th>
+      <th class="align-right">Money</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let cfRecord of nzTable.data">
-      <td>{{cfRecord.recordDateTime}}</td>
-      <td>{{cfRecord.inExCategoryId}}</td>
-      <td>{{cfRecord.localMoney}}</td>
-    </tr>
+    <ng-template ngFor let-cfRecordVO [ngForOf]="nzTable.data">
+      <tr [ngSwitch]="cfRecordVO.inExType"
+          [ngClass]="{'row-income' : cfRecordVO.inExType == EnumInExType.INCOME, 'row-expenses' : cfRecordVO.inExType == EnumInExType.EXPENSES}">
+        <td nzShowExpand [(nzExpand)]="cfRecordVO.expand" class="thin-padding"></td>
+        <td class="align-center thin-padding">{{cfRecordVO.recordDateTime | date:'yyyy-MM-dd'}}</td>
+        <td *ngSwitchCase="EnumInExType.INCOME"   class="thin-padding"><span class="account">{{cfRecordVO.flowInAccountName}} : {{cfRecordVO.inExCategoryName}}</span></td>
+        <td *ngSwitchCase="EnumInExType.EXPENSES" class="thin-padding"><span class="account">{{cfRecordVO.flowOutAccountName}} : {{cfRecordVO.inExCategoryName}}</span></td>
+        <td *ngSwitchCase="EnumInExType.NONE"     class="thin-padding"><span class="account">{{cfRecordVO.flowOutAccountName}} -> {{cfRecordVO.flowInAccountName}}</span></td>
+        <td class="align-right thin-padding money">{{cfRecordVO.localMoney | number:'1.2-2'}}</td>
+      </tr>
+      <tr [nzExpand]="cfRecordVO.expand">
+        <td></td>
+        <td colspan="4">{{cfRecordVO.remark}}</td>
+      </tr>
+  </ng-template>
   </tbody>
 </nz-table>
