--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -3,5 +3,5 @@
 .align-center{text-align:center}
 .align-right{text-align:right}
 .money{font-size:16px; font-weight:bold}
-.account{font-size:14px; /*font-weight:bold*/}
+.account{/*font-size:14px; font-weight:bold*/}
 .thin-padding{padding:3px 1px}
