--- a/frontend/src/app/module/cfrecord-query/component/cfrecord-detail/cfrecord-detail.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/cfrecord-detail/cfrecord-detail.component.html
@@ -1,67 +1,94 @@
-<div [ngSwitch]="cfRecordVO.inExType">
-  <div nz-row>
-    <div nz-col nzSpan="24" class="big-money">{{cfRecordVO.localMoney | number:'1.2-2'}}</div>
-  </div>
-  <div nz-row *ngSwitchCase="EnumInExType.INCOME">
-    <div nz-col nzSpan="12">
-      <div class="small-label">收入账户</div>
-      <div class="big-value">{{cfRecordVO.flowInAccountName}}</div>
+<form nz-form nzLayout="vertical" [ngSwitch]="cfRecordVO.inExType">
+    <div nz-row>
+        <div nz-col nzSpan="12"><a routerLink="../../list">返回</a></div>
+        <div nz-col nzSpan="12" class="big-money">{{cfRecordVO.localMoney | number:'1.2-2'}}</div>
     </div>
-    <div nz-col nzSpan="12">
-      <div class="small-label">收入分类</div>
-      <div class="big-value">{{cfRecordVO.inExCategoryName}}</div>
+    <div nz-row *ngSwitchCase="EnumInExType.INCOME">
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>收入账户</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.flowInAccountName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>收入分类</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.inExCategoryName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-  </div>
-  <div nz-row *ngSwitchCase="EnumInExType.EXPENSES">
-    <div nz-col nzSpan="12">
-      <div class="small-label">支出账户</div>
-      <div class="big-value">{{cfRecordVO.flowOutAccountName}}</div>
+    <div nz-row *ngSwitchCase="EnumInExType.EXPENSES">
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>支出账户</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.flowOutAccountName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>支出分类</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.inExCategoryName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-    <div nz-col nzSpan="12">
-      <div class="small-label">支出分类</div>
-      <div class="big-value">{{cfRecordVO.inExCategoryName}}</div>
+    <div nz-row *ngSwitchCase="EnumInExType.NONE">
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>转出账户</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.flowOutAccountName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>转入账户</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.flowInAccountName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-  </div>
-  <div nz-row *ngSwitchCase="EnumInExType.NONE">
-    <div nz-col nzSpan="12">
-      <div class="small-label">转出账户</div>
-      <div class="big-value">{{cfRecordVO.flowOutAccountName}}</div>
+    <div nz-row *ngSwitchCase="EnumInExType.NONE">
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>转出操作</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.flowOutOperationId}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>转入操作</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.flowInOperationId}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-    <div nz-col nzSpan="12">
-      <div class="small-label">转入账户</div>
-      <div class="big-value">{{cfRecordVO.flowInAccountName}}</div>
+    <div nz-row>
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>日期</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.recordDateTime | date:'yyyy-MM-dd HH:mm:ss'}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
+        <div nz-col [nzSpan]="12">
+            <nz-form-item>
+                <nz-form-label>归属人员</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.ownerName}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-  </div>
-  <div nz-row *ngSwitchCase="EnumInExType.NONE">
-    <div nz-col nzSpan="12">
-      <div class="small-label">转出操作</div>
-      <div class="big-value">无名1</div>
+    <div nz-row>
+        <div nz-col>
+            <nz-form-item>
+                <nz-form-label>标签</nz-form-label>
+                <nz-form-control>
+                    <nz-tag *ngFor="let tag of cfRecordVO.tagNames">{{tag}}</nz-tag>
+                </nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-    <div nz-col nzSpan="12">
-      <div class="small-label">转入操作</div>
-      <div class="big-value">无名2</div>
+    <div nz-row>
+        <div nz-col>
+            <nz-form-item>
+                <nz-form-label>备注</nz-form-label>
+                <nz-form-control><nz-form-text>{{cfRecordVO.remark}}</nz-form-text></nz-form-control>
+            </nz-form-item>
+        </div>
     </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="12">
-      <div class="small-label">日期</div>
-      <div class="big-value">{{cfRecordVO.recordDateTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
-    </div>
-    <div nz-col nzSpan="12">
-      <div class="small-label">归属人员</div>
-      <div class="big-value">{{cfRecordVO.ownerName}}</div>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="24">
-      <div class="small-label">标签</div>
-      <div class="big-value">无</div>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="24">
-      <div class="small-label">备注</div>
-      <div class="big-value">{{cfRecordVO.remark}}</div>
-    </div>
-  </div>
-</div>
+</form>
