--- a/frontend/src/app/module/cfrecord-query/component/cfrecord-list/cfrecord-list.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/cfrecord-list/cfrecord-list.component.html
@@ -10,8 +10,8 @@
                 <td style="padding:0px 3px; border:none; width:24px; font-size:20px;" rowspan="2"><a routerLink="../detail/{{cfRecordVO.id}}"><i class="anticon anticon-right-circle-o"></i></a></td>
               </tr>
               <tr [ngSwitch]="cfRecordVO.inExType">
-                <td *ngSwitchCase="EnumInExType.INCOME"   style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowInAccountName}}  <nz-tag [nzColor]="'green'">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
-                <td *ngSwitchCase="EnumInExType.EXPENSES" style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <nz-tag [nzColor]="'red'">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
+                <td *ngSwitchCase="EnumInExType.INCOME"   style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowInAccountName}}  <nz-tag nzColor="green">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
+                <td *ngSwitchCase="EnumInExType.EXPENSES" style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <nz-tag nzColor="red">{{cfRecordVO.inExCategoryName}}</nz-tag></span></td>
                 <td *ngSwitchCase="EnumInExType.NONE"     style="padding:0px 3px; border:none;"><span class="account">{{cfRecordVO.flowOutAccountName}} <i class="anticon anticon-arrow-right"></i> {{cfRecordVO.flowInAccountName}}</span></td>
               </tr>
             </table>
